# FastAPIComplete

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0195fe175ac4_auto_vote.py  2763983575ce_create_posts_table.py  4a8b18cbca40_add_user_table.py  57ec023af639_add_foreign_key_to_posts_table.py  5b5d9aae474d_add_content_column_to_posts_table.py  91239c3f5583_add_columns_to_posts.py
app/: main.py  models.py  schemas.py  utils.py
app/routers/: auth.py  user.py
fastapicomplete/app/: config.py  database.py  main.py  oauth2.py
fastapicomplete/app/routers/: post.py  vote.py
tests/: test_fastapicomplete.py  test_users.py
